Configuracion de tema

--- a/Application/appsettings.json
+++ b/Application/appsettings.json
@@ -11,10 +11,14 @@
       "Serilog.Sinks.Console",
       "Serilog.Sinks.File"
     ],
-    "MinimumLevel": "Debug",
+    "MinimumLevel": "Information",
     "WriteTo": [
       {
-        "Name": "Console"
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Literate, Serilog.Sinks.Console",
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
+        }
       },
       {
         "Name": "File",
@@ -29,12 +33,6 @@
       "WithThreadId"
     ],
     "Destructure": [
-      {
-        "Name": "With",
-        "Args": {
-          "policy": "Sample.CustomPolicy, Sample"
-        }
-      },
       {
         "Name": "ToMaximumDepth",
         "Args": {
