--- a/Application/appsettings.json
+++ b/Application/appsettings.json
@@ -23,7 +23,9 @@
       {
         "Name": "File",
         "Args": {
-          "path": "Logs/log.txt"
+          "path": "Logs/log-.txt",
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}",
+          "rollingInterval": "Day"
         }
       }
     ],
