--- a/Application/appsettings.json
+++ b/Application/appsettings.json
@@ -23,9 +23,9 @@
       {
         "Name": "File",
         "Args": {
-          "path": "Logs/log-.txt",
-          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}",
-          "rollingInterval": "Day"
+          "path": "Logs/log-.json",
+          "rollingInterval": "Day",
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
         }
       }
     ],
