Sink de mongodb

--- a/Application/appsettings.json
+++ b/Application/appsettings.json
@@ -27,6 +27,16 @@
           "rollingInterval": "Day",
           "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
         }
+      },
+      {
+        "Name": "MongoDBBson",
+        "Args": {
+          "databaseUrl": "mongodb://root:example@localhost:27017/logs?authSource=admin",
+          "collectionName": "logs",
+          "cappedMaxSizeMb": "1024",
+          "cappedMaxDocuments": "50000",
+          "rollingInterval": "Day"
+        }
       }
     ],
     "Enrich": [
